# Naiview

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  README.md  allfiles.txt  docker-compose.yml  pyproject.toml  requirements.txt
data/: rebuild_bge_index.py  taxonomy.yaml  test_faiss.py
data/phrase_library/: .gitkeep  category_examples.json  context_features.json  examples_by_sentiment.json  indexed_library.json  regional_markers.json  token_corpus.txt
data/processed/: .chroma_checkpoint.json  .enrich_checkpoint.json  .gitkeep  faiss_index_bge_opt
data/raw/: .gitkeep
data/synthetic/: .checkpoint.json  .gitkeep  nigerian_reviews.jsonl
docs/: DATASET_STRATEGY.md  EVALUATION_RESULTS.md  MIGRATION.md  NTERNAL_ARCHITECTURE.md  TECHNICAL_ARCHITECTURE.md  scaffold_summary.md
frontend/: .env.example  HANDOFF.md  Naiview Intelligence.html  README.md  env.js  vercel.json
frontend/src/: app.jsx  components.css  styles.css  translations.js
frontend/src/components/: nav.jsx  radar.jsx  shared.jsx
frontend/src/pages/: architecture.jsx  evaluation.jsx  landing.jsx  paper.jsx  task-a.jsx  task-b.jsx
frontend/uploads/: NaijaReview_Design_Prompt (1).md
naijareview/: __init__.py  config.py
naijareview/agents/: __init__.py  task_a.py  task_b.py
naijareview/agents/nodes/: __init__.py  shared.py  task_a_nodes.py  task_b_nodes.py
naijareview/api/: __init__.py  deps.py  main.py  middleware.py  startup.py
naijareview/api/routes/: admin.py  auth.py  health.py  task_a.py  task_b.py
naijareview/db/: __init__.py  engine.py  models.py
naijareview/eval/: __init__.py  ablations.py  harness.py  user_study.py
naijareview/eval/metrics/: __init__.py  abeg.py  bertscore.py  hit_at_k.py  ndcg.py  rouge.py
naijareview/llm/: __init__.py  clients.py  router.py
naijareview/llm/prompts/: cold_start_turn_1.jinja  cold_start_turn_2.jinja  cold_start_turn_3.jinja  task_a_generate.jinja  task_a_vibe_rewrite.jinja  task_b_explain.jinja  task_b_rerank.jinja  vibe_scorer.jinja
naijareview/memory/: __init__.py  embedding.py  episodic.py  item_index.py  semantic.py  working.py
naijareview/nigerian_lang/: __init__.py  code_switching.py  phrase_library.py  pidgin_mapper.py  region_signals.py  taxonomy.py
naijareview/schemas/: __init__.py  auth.py  item.py  output.py  persona.py  user.py  vibe.py
naijareview/skills/: __init__.py  context_assembly.py  fingerprinting.py  memory_bootstrap.py  persona_authoring.py  regeneration.py  region_inference.py  vibe_checking.py
naijareview/tools/: __init__.py  diversity.py  fingerprint.py  memory.py  persona.py  reasoning.py  region.py  retrieval.py  taxonomy.py  vibe.py
naijareview/utils/: __init__.py  security.py
notebooks/: 01_confirm_domain_distribution.ipynb  02_extract_missing_domains.ipynb  03_synthetic_nigerian_reviews.ipynb
results/: .gitkeep
results/eval/: 2026-05-24_2004_ablation_comparison.csv  2026-05-24_2004_summary.md  2026-05-24_2004_task_a_full.json  2026-05-24_2023_ablation_comparison.csv  2026-05-24_2023_summary.md  2026-05-24_2023_task_a_full.json  2026-05-24_2023_task_b_full.json  FINAL_EVAL_REPORT.md
scripts/: build_final_dataset.py  build_memory.py  enrich_items.py  generate_synthetic_reviews.py  process_data.py  test_integration.py
tests/eval/: harness.py  test_harness.py
tests/integration/: test_cold_start.py  test_task_a_graph.py  test_task_b_graph.py
tests/unit/: test_fingerprint.py  test_region_detection.py  test_taxonomy.py  test_vibe_check.py
